# SQLiteWrapperCPP

./: CMakeLists.txt  DatabaseAuthorizer.cpp  DatabaseAuthorizer.h  SQLValue.cpp  SQLValue.h  SQLiteAuthorizer.cpp  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteFileSystem.cpp  SQLiteFileSystem.h  SQLiteStatement.cpp  SQLiteStatement.h  SQLiteTransaction.cpp  SQLiteTransaction.h  build.sh
cmake/: FindGlog.cmake
test/: test_SQLite.cpp
